--- a/math_pres.html
+++ b/math_pres.html
@@ -7,9 +7,9 @@
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
-<link rel="stylesheet" href="file:///home/raynei/.config/emacs/.local/straight/build-29.1/revealjs/dist/reveal.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.css"/>
 
-<link rel="stylesheet" href="file:///home/raynei/.config/emacs/.local/straight/build-29.1/revealjs/dist/theme/simple.css" id="theme"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/theme/simple.css" id="theme"/>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
@@ -55,11 +55,11 @@ Write an equation in the form \(A=A_{0}(\frac{1}{2})^{\frac{t}{h}}\) that models
 </section>
 </div>
 </div>
-<script src="file:///home/raynei/.config/emacs/.local/straight/build-29.1/revealjs/dist/reveal.js"></script>
-<script src="file:///home/raynei/.config/emacs/.local/straight/build-29.1/revealjs/plugin/markdown/markdown.js"></script>
-<script src="file:///home/raynei/.config/emacs/.local/straight/build-29.1/revealjs/plugin/notes/notes.js"></script>
-<script src="file:///home/raynei/.config/emacs/.local/straight/build-29.1/revealjs/plugin/search/search.js"></script>
-<script src="file:///home/raynei/.config/emacs/.local/straight/build-29.1/revealjs/plugin/zoom/zoom.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/markdown.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/notes/notes.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/search/search.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/zoom/zoom.js"></script>
 <script>
 // Full list of configuration options available here:
 // https://github.com/hakimel/reveal.js#configuration
